--- a/L28-springDataJdbc/src/main/resources/templates/addClient.html
+++ b/L28-springDataJdbc/src/main/resources/templates/addClient.html
@@ -5,7 +5,7 @@
     <title>Добавление клиента</title>
 </head>
 <body>
-<form action="#" method="post" th:action="@{/add-client}" th:object="${client}">
+<form action="#" method="post" th:action="@{/add-client}" th:object="${clientDTO}">
     <label for="name">Имя</label>
     <p>
         <input type="text" th:field="*{name}" id="name">
